--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-  <string name="app_name">Assignment5</string>
+  <string name="app_name">Assignment4</string>
+    <string name="username">username</string>
+  <string name="password">password</string>
+  <string name="log_in">log in</string>
+    <string name="no_products_available">No Products Available</string>
 </resources>
